--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -1,11 +1,10 @@
 .hero {
-    background: linear-gradient(to right, rgba(0,0,0,0.7), rgba(0,0,0,0.1)), url(../../images/background.jpeg);
+    background: linear-gradient(to right, rgba(0,0,0,0.7), rgba(0,0,0,0.1)), url(../../images/mountains.jpeg);
     height: 100vh;
     background-position: center;
     background-size: cover;
 }
 
 .hero-text {
-    text-align: center;
-    padding-left: 25px;
+
 }
