--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -9,16 +9,64 @@
     color: whitesmoke;
 }
 
-.homeButton {
-    border: 0.2em solid whitesmoke !important;
-    background: transparent;
-    color: whitesmoke;
-    font-family: fantasy;
-    font-size: 25px;
-    border-radius: 5px;
-    width: 200px;
-    height: 75px;
-    margin: 10px;
+.btn {
+	position: relative;
+	padding: 1.4rem 4.2rem;
+	padding-right: 3.1rem;
+	font-size: 1.4rem;
+	color: whitesmoke !important;
+	letter-spacing: 1.1rem;
+	text-transform: uppercase;
+	transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);	
+	cursor: pointer;
+	user-select: none;
+}
+
+.btn:before, .btn:after {
+	content: '';
+	position: absolute;
+	transition: inherit !important;
+	z-index: -1;
+}
+
+.btn:hover {
+	color: rgb(32, 33, 48) !important;
+	transition-delay: .5s;
+}
+
+.btn:hover:before {
+	transition-delay: 0s;
+}
+
+.btn:hover:after {
+	background: whitesmoke !important;
+	transition-delay: .3s;
+}
+
+/* Animation Directions */
+
+.from-top:before, 
+.from-top:after {
+	left: 0;
+	height: 0;
+	width: 100%;
+}
+
+.from-top:before {
+	bottom: 0;	
+	border: 1px solid whitesmoke !important;
+	border-top: 0;
+	border-bottom: 0;
+}
+
+.from-top:after {
+	top: 0;
+	height: 0;
+}
+
+.from-top:hover:before,
+.from-top:hover:after {
+	height: 100%;
 }
 
 #homeButtons {
