--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -1,3 +1,7 @@
+body {
+    justify-content: center;
+}
+
 .hero {
     background: linear-gradient(to right, rgba(0,0,0,0.7), rgba(0,0,0,0.1)), url(../../images/mountains.jpeg);
     height: 100vh;
@@ -10,6 +14,7 @@
 }
 
 .btn {
+    margin-left: 30px;
 	position: relative;
 	padding: 1.4rem 4.2rem;
 	padding-right: 3.1rem;
@@ -17,7 +22,7 @@
 	color: whitesmoke !important;
 	letter-spacing: 1.1rem;
 	text-transform: uppercase;
-	transition: all 500ms cubic-bezier(0.77, 0, 0.175, 1);	
+	transition: all 300ms cubic-bezier(0.77, 0, 0.175, 1);	
 	cursor: pointer;
 	user-select: none;
 }
@@ -25,13 +30,13 @@
 .btn:before, .btn:after {
 	content: '';
 	position: absolute;
-	transition: inherit !important;
+	transition: inherit;
 	z-index: -1;
 }
 
 .btn:hover {
-	color: rgb(32, 33, 48) !important;
-	transition-delay: .5s;
+	color: rgb(99, 104, 174) !important;
+	transition-delay: .1s;
 }
 
 .btn:hover:before {
@@ -40,20 +45,20 @@
 
 .btn:hover:after {
 	background: whitesmoke !important;
-	transition-delay: .3s;
+	transition-delay: .05s;
 }
 
 /* Animation Directions */
 
 .from-top:before, 
 .from-top:after {
-	left: 0;
-	height: 0;
-	width: 100%;
+	left: 0 !important;
+	height: 0 !important;
+	width: 100% !important;
 }
 
 .from-top:before {
-	bottom: 0;	
+	bottom: 0 !important;
 	border: 1px solid whitesmoke !important;
 	border-top: 0;
 	border-bottom: 0;
@@ -66,7 +71,12 @@
 
 .from-top:hover:before,
 .from-top:hover:after {
-	height: 100%;
+	height: 100% !important;
+}
+
+/* Global Settings */
+*, *:before, *:after {
+	box-sizing: border-box;
 }
 
 #homeButtons {
