--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -1,7 +1,3 @@
-body {
-    justify-content: center;
-}
-
 .hero {
     background: linear-gradient(to right, rgba(0,0,0,0.7), rgba(0,0,0,0.1)), url(../../images/me-on-mountain.jpeg);
     height: 100vh;
@@ -21,6 +17,7 @@ body {
 .typeWriter {
 	margin-top: 4em;
 	font-size: 54px;
+	font-family: "Nanum Myeongjo", sans-serif;
 }
 
 .letter-g {
