--- a/src/components/Sidebar/styles.css
+++ b/src/components/Sidebar/styles.css
@@ -5,10 +5,10 @@
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
+  cursor: pointer;
 }
 
 .icon-bar a {
-  border-radius: 1px !important;
   display: block;
   text-align: center;
   padding: 16px;
@@ -23,31 +23,6 @@
   background-color: #000;
 }
 
-.facebook {
-  background: #3B5998;
-  color: white;
-}
-
-.twitter {
-  background: #55ACEE;
-  color: white;
-}
-
-.google {
-  background: #dd4b39;
-  color: white;
-}
-
-.linkedin {
-  background: #007bb5;
-  color: white;
-}
-
-.youtube {
-  background: #bb0000;
-  color: white;
-}
-
 .content {
   margin-left: 75px;
   font-size: 30px;
@@ -55,4 +30,10 @@
 
 *, *::before, *::after {
     box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+    .icon-bar {
+        display: none;
+    }
 }
