--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -1,4 +1,4 @@
-.hero {
+body {
     background: linear-gradient(to right, rgba(0,0,0,0.7), rgba(0,0,0,0.1)), url(../../images/me-on-mountain.jpeg);
     height: 100vh;
     background-position: center;
@@ -16,76 +16,6 @@
 
 .typeWriter {
 	margin-top: 4em;
-	font-size: 48px;
+	font-size: 64px;
 	font-family: "Nanum Myeongjo", sans-serif;
-}
-
-.btn {
-    margin-left: 50px;
-	position: relative;
-	padding: 1.4rem 4.2rem;
-	padding-right: 3.1rem;
-	font-size: 1.4rem;
-	color: whitesmoke !important;
-	letter-spacing: 1.1rem;
-	text-transform: uppercase;
-	transition: all 300ms cubic-bezier(0.77, 0, 0.175, 1);
-	cursor: pointer;
-	user-select: none;
-}
-
-.btn:before, .btn:after {
-	content: '';
-	position: absolute;
-	transition: inherit;
-	z-index: -1;
-}
-
-.btn:hover {
-	color: rgb(99, 104, 174) !important;
-	transition-delay: .1s;
-}
-
-.btn:hover:before {
-	transition-delay: 0s;
-}
-
-.btn:hover:after {
-	background: whitesmoke !important;
-	transition-delay: .05s;
-}
-
-/* Animation Directions */
-
-.from-top:before, 
-.from-top:after {
-	left: 0 !important;
-	height: 0 !important;
-	width: 100% !important;
-}
-
-.from-top:before {
-	bottom: 0 !important;
-	border: 1px solid whitesmoke !important;
-	border-top: 0;
-	border-bottom: 0;
-}
-
-.from-top:after {
-	top: 0;
-	height: 0;
-}
-
-.from-top:hover:before,
-.from-top:hover:after {
-	height: 100% !important;
-}
-
-#homeButtons {
-    margin-top: 35vh;
-}
-
-/* Global Settings */
-*, *:before, *:after {
-	box-sizing: border-box;
 }
