--- a/src/components/Sidebar/styles.css
+++ b/src/components/Sidebar/styles.css
@@ -13,7 +13,7 @@
   text-align: center;
   padding: 16px;
   transition: all 0.3s ease;
-  background: whitesmoke;
+  background: rgba(245, 245, 245, 0.776);
   color: black;
   font-size: 20px;
 }
