--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -7,21 +7,21 @@
 }
 
 .menu-bars {
-    margin-left: 2rem;
+    margin-left: 1rem;
     font-size: 2rem;
     background: none;
+    opacity: 50%;
 }
 
 .nav-menu {
-    background-color: rgba(255, 255, 255, 0.55);
-    opacity: 50%;
-    width: 250px;
+    background-color: black;
+    width: 200px;
     height: 100vh;
     display: flex;
     justify-content: center;
     position: fixed;
     top: 0;
-    /* left: -100%; */
+    left: -100%;
     transition: 850ms;
 }
 
@@ -41,7 +41,7 @@
 
 .nav-text a {
     text-decoration: none;
-    color: black;
+    color: rgba(245, 245, 245, 0.79);
     font-size: 18px;
     width: 95%;
     height: 100%;
@@ -54,4 +54,22 @@
 .nav-text a:hover {
     background-color: black;
     color: whitesmoke;
+}
+
+.nav-menu-items {
+    width: 100%;
+
+}
+
+.navbar-toggle {
+    background-color: transparent;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+span {
+    margin-left: 16px;
 }
