--- a/src/components/Sidebar/styles.css
+++ b/src/components/Sidebar/styles.css
@@ -14,6 +14,7 @@
   padding: 16px;
   transition: all 0.3s ease;
   background: rgba(245, 245, 245, 0.79);
+  opacity: 50%;
   color: black;
   font-size: 20px;
 }
