--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,30 @@
   justify-content: center;
   font-size: 3rem;
 }
+
+.resume-page {
+  background: linear-gradient(to right, rgba(148, 148, 148, 0.7), rgba(41, 41, 41, 0.1)),  url(./images/rice-paper2.jpeg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.resume-btn {
+  border-radius: 5px;
+  background: #3b4edc;
+  color: white;
+  transition: 0.25s ease;
+  border: none;
+  font-size: 16px;
+  padding: 8px 10px;
+  width: 280px;
+  margin: 0;
+}
+
+.resume-btn:hover {
+  color: #3b4edc;
+  background-color: transparent;
+  box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.1);
+  border: 0.5px solid transparent;
+}
