--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,16 +1,23 @@
 .footer {
-  background: rgba(0, 12, 0, 0.858);
+  background: transparent;
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   font-size: 17px;
-  color: whitesmoke;
+  color: #000;
   text-align: center;
   position: relative;
   width: 100%;
   left: 0px;
-  bottom: 0px;
+  bottom: 0;
   margin-top: 0rem;
-  margin-bottom: orem;
+  margin-bottom: 0rem;
   padding: 0rem;
   height: 40px;
+  color: #000;
+  font-family: "Lato", sans-serif !important;
+}
+
+.letter-g {
+  color: #1245a8;
+  font-family: "Great Vibes", sans-serif;
 }
