--- a/src/components/SkillsBar/style.css
+++ b/src/components/SkillsBar/style.css
@@ -13,8 +13,8 @@ progress {
   padding: 0;
 }
 progress::-webkit-progress-bar {
-  background-color: #c3c3c3;
+  background-color: #ebebeb;
 }
 progress::-webkit-progress-value {
-  background-color: #2c3687;
+  background-color: #3b4edc;
 }
