--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,18 @@
   background-position: center;
   background-size: cover;
 }
+
+.myPicImage {
+  display: block;
+  width: 440px;
+  height: 430px;
+  /* margin: 1em auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center; */
+  -webkit-border-radius: 99em;
+  -moz-border-radius: 99em;
+  border-radius: 99em;
+  border: 5px solid #eee;
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
+}
