--- a/src/App.css
+++ b/src/App.css
@@ -43,23 +43,8 @@
 }
 
 .about-page {
-  background: linear-gradient(to right, rgba(148, 148, 148, 0.7), rgba(41, 41, 41, 0.1)),  url(./images/mountains.jpeg);
+  background: linear-gradient(to left, rgba(148, 148, 148, 0.7), rgba(41, 41, 41, 0.1)),  url(./images/background.jpeg);
   height: 100vh;
   background-position: center;
   background-size: cover;
-}
-
-.myPicImage {
-  display: block;
-  width: 440px;
-  height: 430px;
-  /* margin: 1em auto;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center; */
-  -webkit-border-radius: 99em;
-  -moz-border-radius: 99em;
-  border-radius: 99em;
-  border: 5px solid #eee;
-  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
 }
