--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -1,5 +1,5 @@
 .background {
-    background: linear-gradient(to right, rgba(0,0,0,0.7), rgba(0,0,0,0.1)), url(../../images/me-on-mountain.jpeg);
+    background: linear-gradient(to right, rgba(0,0,0,0.7), rgba(0,0,0,0.1)), url(../../images/particles.jpeg);
     height: 100vh;
     background-position: center;
     background-size: cover;
@@ -30,4 +30,21 @@ hr.about-page-line {
     margin-left: -0.5em;
 	font-size: 40px;
 	font-family: "Nanum Myeongjo", sans-serif;
+}
+
+.myPicImage {
+  display: block;
+  width: 250px;
+  height: 250px;
+  margin: 1em auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  -webkit-border-radius: 99em;
+  -moz-border-radius: 99em;
+  border-radius: 99em;
+  border: 5px solid #eee;
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
+  margin-top: 7em;
+  margin-bottom: -3em;
 }
