--- a/src/components/Sidebar/styles.css
+++ b/src/components/Sidebar/styles.css
@@ -13,14 +13,14 @@
   text-align: center;
   padding: 16px;
   transition: all 0.3s ease;
-  background: rgba(245, 245, 245, 0.79);
-  color: black;
+  background: #000;
+  color: rgba(245, 245, 245, 0.79);
   font-size: 20px;
 }
 
 .icon-bar a:hover {
-  color: whitesmoke;
-  background-color: #000;
+  color: #000;
+  background-color: rgba(245, 245, 245, 0.79);
 }
 
 .content {
