changed skills bar color

--- a/src/components/SkillsBar/style.css
+++ b/src/components/SkillsBar/style.css
@@ -16,5 +16,5 @@ progress::-webkit-progress-bar {
   background-color: #ebebeb;
 }
 progress::-webkit-progress-value {
-  background-color: #3b4edc;
+  background-color: #388087;
 }
