--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 
 .resume-btn {
   border-radius: 5px;
-  background: #3b4edc;
+  background: #388087;
   color: white;
   transition: 0.25s ease;
   border: none;
@@ -36,7 +36,7 @@
 }
 
 .resume-btn:hover {
-  color: #3b4edc;
+  color: #388087;
   background-color: transparent;
   box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.1);
   border: 0.5px solid transparent;
