--- a/src/components/Hero/styles.css
+++ b/src/components/Hero/styles.css
@@ -6,7 +6,7 @@
 }
 
 .my-name {
-    margin-top: 2em;
+    margin-left: 1em;
 	font-size: 70px;
 	font-family: "Nanum Myeongjo", sans-serif;
     color: whitesmoke;
@@ -16,7 +16,7 @@
   display: block;
   width: 200px;
   height: 200px;
-  margin: 1em auto;
+  margin-left: 1.5em;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -25,8 +25,6 @@
   border-radius: 99em;
   border: 5px solid #eee;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
-  margin-top: 7em;
-  margin-bottom: -7em;
 }
 
 hr.about-page-line {
@@ -43,9 +41,11 @@ hr.about-page-line {
 }
 
 .typeWriter {
-	margin-top: 0em;
-    margin-left: -0.5em;
 	font-size: 40px;
 	font-family: "Nanum Myeongjo", sans-serif;
     font-weight: bold;
+}
+
+#modal-row {
+    margin-left: 1em;
 }
