--- a/src/components/AboutModal/styles.css
+++ b/src/components/AboutModal/styles.css
@@ -1,18 +1,10 @@
 .about-me-button {
-  border-radius: 5px;
-  background: #388087;
-  color: white;
-  transition: 0.25s ease;
-  border: none;
-  font-size: 16px;
-  padding: 8px 10px;
-  width: 280px;
-  margin: 0;
+  color: #388087 !important;
+  background-color: transparent !important;
+  box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.1) !important;
+  border: 0.5px solid transparent !important;
 }
 
-.about-me-button:hover {
-  color: #388087;
-  background-color: transparent;
-  box-shadow: 0 6px 18px 0 rgba(0, 0, 0, 0.1);
-  border: 0.5px solid transparent;
+.modal-close-btn {
+    color: #388087;
 }
