--- a/src/App.css
+++ b/src/App.css
@@ -34,13 +34,11 @@
   border: 0.5px solid transparent;
 }
 
-.about-page {
+.portfolio-page {
   background: linear-gradient(to right, rgba(9, 9, 9, 0.851), rgba(4, 4, 4, 0.475)),  url(./images/cool-background.png);
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  height: 100%;
+    height: 100vh;
+    background-position: center;
+    background-size: cover;
 }
 
 .p1, .p2, .p3, .p4 {
