--- a/src/components/Navbar2/styles.css
+++ b/src/components/Navbar2/styles.css
@@ -3,71 +3,29 @@
     height: 80px;
     display: flex;
     justify-content: center;
+    margin-right: 20px;
     right: 0;
 }
 
-.menu-bars {
-    margin-left: 1rem;
-    font-size: 2rem;
-    background: none;
-    display: flex;
+.navbar-link {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  text-align: center;
+  line-height: 60px;
+  font-size: 24px;
+  color: rgb(193, 191, 191);
+  transition: .5s;
 }
 
-.nav-menu {
-    background-color: black;
-    width: 200px;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: -100%;
-    transition: 850ms;
+.navbar-link:hover:before {
+  transform: scale(1.2);
+  filter: blur(3px);
 }
 
-.nav-menu.active {
-    left: 0;
-    transition: 350ms;
-}
-
-.nav-text {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 8px, 0px, 8px, 16px;
-    list-style: none;
-    height: 60px;
-}
-
-.nav-text a {
-    text-decoration: none;
-    color: rgba(245, 245, 245, 0.79);
-    font-size: 18px;
-    width: 95%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
-    border-radius: 4px;
-}
-
-.nav-text a:hover {
-    background-color: black;
-    color: whitesmoke;
-}
-
-.nav-menu-items {
-    width: 100%;
-
-}
-
-.navbar-toggle {
-    background-color: transparent;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+.navbar-link:hover {
+  color: #388087;
+  text-shadow: 0 0 15px #01ffc4b1;
 }
 
 span {
