--- a/src/components/Navbar2/styles.css
+++ b/src/components/Navbar2/styles.css
@@ -1,10 +1,18 @@
 .navbar {
-    background-color: transparent;
+    background-color: #000;
     height: 80px;
     display: flex;
     justify-content: center;
     margin-right: 20px;
     right: 0;
+}
+
+.navbar-collapse {
+    background-color: black;
+}
+
+.navbar-collapse:active {
+  right: 0;
 }
 
 .navbar-link {
