--- a/src/components/Navbar2/styles.css
+++ b/src/components/Navbar2/styles.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #000;
+    background-color: transparent;
     height: 80px;
     display: flex;
     justify-content: center;
@@ -8,7 +8,7 @@
 }
 
 .navbar-collapse {
-    background-color: black;
+    background-color: transparent;
 }
 
 .navbar-collapse:active {
