completed portfolio page

--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -14,7 +14,7 @@
 }
 
 .nav-menu {
-    background-color: black;
+    background-color: #000;
     width: 200px;
     height: 100vh;
     display: flex;
