--- a/src/components/Navbar2/styles.css
+++ b/src/components/Navbar2/styles.css
@@ -22,7 +22,7 @@
   text-align: center;
   line-height: 60px;
   font-size: 18px;
-  color: rgb(193, 191, 191);
+  color: #388087;
   transition: .5s;
 }
 
