--- a/src/components/Navbar2/styles.css
+++ b/src/components/Navbar2/styles.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: transparent;
+    background-color: transparent !important;
     height: 80px !important;
     display: flex;
     /* justify-content: center; */
@@ -38,8 +38,4 @@
 
 span {
     margin-left: 16px;
-}
-
-#responsive-navbar-nav {
-  background: #000 !important;
 }
