--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -13,7 +13,7 @@
   margin-bottom: 0rem;
   padding: 0rem;
   height: 40px;
-  color: #000;
+  color: rgb(57, 53, 53);
   font-family: "Lato", sans-serif !important;
 }
 
