--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -3,7 +3,7 @@
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   font-size: 17px;
-  color: #000;
+  color: whitesmoke !important;
   text-align: center;
   position: relative;
   width: 100%;
