--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: 100vh;
+  background-size: cover;
   color: rgba(245, 245, 245, 0.897);
 }
 
