--- a/src/components/TwitterCloneModal/styles.css
+++ b/src/components/TwitterCloneModal/styles.css
@@ -16,11 +16,23 @@
   background-image: linear-gradient(45deg, #388087 50%, transparent 50%) !important;
   background-position: 100% !important;
   background-size: 400% !important;
-  -webkit-transition: background 400ms ease-in-out !important;
-  transition: background 400ms ease-in-out !important;
+  -webkit-transition: background 350ms ease-in-out !important;
+  transition: background 350ms ease-in-out !important;
 }
 .modal-button:hover {
   background-position: 0 !important;
+}
+
+.modal-github__icon {
+  font-size: 30px;
+  margin: 1rem;
+  color: black;
+}
+
+.modal-external-link__icon {
+    font-size: 22px;
+    margin: 0.15rem;
+    color: black;
 }
 
 
